--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="imageGallery">
+<html ng-app="image-gallery">
   <head>
     <title>Steel's Awesome Images</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -7,7 +7,7 @@
     <script src="lib/angular.min.js"></script>
     <script src="js/index.js"></script>
     <script src="js/ImageManager.service.js"></script>
-    <script src="js/components/ImageGallery.controller.js"></script>
+    <script src="js/components/ImageGallery.component.js"></script>
     <script src="js/components/ImageDetails.component.js"></script>
     <script src="js/components/ImageSelector.component.js"></script>
   </head>
