--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
     <script src="js/components/ImageSelector.component.js"></script>
   </head>
   <body>
-    <image-gallery></image-gallery>
+    <image-gallery class="column"></image-gallery>
   </body>
 </html>
