--- a/react/src/index.html
+++ b/react/src/index.html
@@ -8,6 +8,6 @@
   <title>Image Gallery</title>
 </head>
 <body>
-  <script src="./app.tsx"></script>
+  <script src="./index.tsx"></script>
 </body>
 </html>
